fixes alignment on tags

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -612,3 +612,9 @@ nav {
   font-feature-settings: "ss02","ss03","ss06","ss08";
 }
 */
+
+.space-y-1>:not([hidden])~:not([hidden]) {
+    --tw-space-y-reverse: 0;
+    /* margin-top:calc(.25rem * calc(1 - var(--tw-space-y-reverse))); */
+    margin-bottom: calc(.25rem * var(--tw-space-y-reverse))
+}
